sumo/tests/netconvert/errors/Makefile.am
SUBDIRS =  false_output no_output unknown_option xml_false_edg xml_false_nod \
xml_no_edg xml_no_nod

EXTRA_DIST =  input_edges.edg.xml input_nodes.nod.xml testsuite.netconvert

